# calliope

./: .gitmodules  CMakeLists.txt  COPYRIGHT  LICENSE  README  README-PDT.md  README.md
doc/: input-format.md
examples/SISC/: README.md  boundary-layer.json  burgers-double-sine.json  semiconductor.json  sod-shock-tube.json
src/: CMakeLists.txt  bc.F90  bc_data.F90  bc_procs.F90  bdf2_dae.F90  block_linear_solver.F90  bls_solver.F90  blssolve.F90  btd_matrix_type.F90  burgers_type.F90  cell_data_type.F90  comio.f90  common_io.F90  conv_diff_type.F90  coord_grid_type.F90  drift_diff_type.F90  idaesol_type.F90  index_func_type.F90  init.f90  initialize.F90  kindpar.F90  kinds.F90  local_arrays.F90  local_global.F90  local_laplacian.F90  local_mfe.F90  locarray.F90  locglb.F90  loclapl.F90  locmfe.F90  locmfeprocs.f90  mfe1.F90  mfe1.f90  mfe1.sh  mfe1_disc_core_type.F90  mfe1_disc_type.F90  mfe1_solver_type.F90  mfe1_vector_type.F90  mfe_constants.F90  mfe_data.F90  (+29 more)
test/: CMakeLists.txt
test/bdf2_dae/: newtest.F90  nodal_fem_1d.F90
test/boundary-layer/: CMakeLists.txt  mfegrf-ref  mfein  mfein.json  mfelog-ref  test.py
test/burgers/: CMakeLists.txt  mfegrf-ref  mfein.json  mfelog-ref  test.py
test/drift-diff/: CMakeLists.txt  mfegrf-ref  mfein.json  mfelog-ref  test.py
test/idaesol_type/: CMakeLists.txt  newtest.F90  nodal_fem_1d.F90
test/sod/: CMakeLists.txt  mfegrf-ref  mfein  mfein.json  mfelog-ref  test.py
